# zed-dev

./: 2017_10_6.conf  Questions.md  SN14032.conf
2d-2d/: CMakeLists.txt  CMakeLists.txt.user.b6c6de2
2d-2d/include/: feature_extraction.h  pose_estimation_2d2d.h
2d-2d/src/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp
2d-2d/test/: 2d-2d.cpp  CMakeLists.txt
PCL/: CMakeLists.txt
PCL/src/: pose_estimation_3d2d.cpp
PCL/test/: test_pcl.cpp
PCL_zed/: CMakeLists.txt
PCL_zed/include/: pcl.h
PCL_zed/src/: pcl.cpp
PNP/: CMakeLists.txt
PNP/include/: pose_estimation_3d2d.h
PNP/src/: CMakeLists.txt  pose_estimation_3d2d.cpp
PNP/test/: CMakeLists.txt  test_pnp.cpp
build-PNP-Desktop_Qt_5_7_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  PNP.cbp  cmake_install.cmake
build-PNP-Desktop_Qt_5_7_0_GCC_64bit-Debug/src/: Makefile  cmake_install.cmake
build-PNP-Desktop_Qt_5_7_0_GCC_64bit-Debug/test/: Makefile  cmake_install.cmake
build-pcl-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  PCL.cbp  cmake_install.cmake
build-pcl-Desktop_Qt_5_7_0_GCC_64bit-Default/src/: Makefile  cmake_install.cmake
build-pcl-Desktop_Qt_5_7_0_GCC_64bit-Default/test/: Makefile  cmake_install.cmake
feature_extractoin/: CMakeLists.txt
feature_extractoin/src/: CMakeLists.txt  feature_extraction.cpp
feature_extractoin/test/: CMakeLists.txt  main.cpp  test_feature.cpp
image-capture/: CMakeLists.txt  capture.cpp  main.cpp
pcl/: CMakeLists.txt
pcl/include/: pcl.h  pose_estimation_3d2d.h
pcl/src/: CMakeLists.txt  pcl.cpp  pose_estimation_3d2d.cpp
pcl/test/: CMakeLists.txt  test_pcl.cpp
pcl_old/include/: pcl.h
pcl_old/src/: pcl.cpp
pcl_old/test/: CMakeLists.txt  test_pcl.cpp
